2012-05-18  Koichiro Kikuchi <koichiro@rworks.jp>

	* godmode/agentes/configurar_agente.php: Merged from 4.0: Added
	 missing io_safe_input to the module copy operation.

2012-05-17  Sergio Martin <sergio.martin@artica.es>

	* install.php: Fixed number of step mistakes
	in the install process
	Merged from 4.0

2012-05-17  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Added create_network_module_from_component 
	operation to API

2012-05-17  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup.php: Fixed bug updating setup.

2012-05-17  Vanessa Gil <vanessa.gil@artica.es>

	* pandoradb.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.oracle.sql
	  pandoradb_data.sql
	  pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql
	  index.php
	  godmode/users/configure_user.php
	  include/functions_config.php
	  include/javascript/jquery.pandora.js: Added password policy.

2012-05-17  Kikuchi Koichiro  <koichiro@rworks.jp>

	* extensions/update_manager/settings.php,
	  extensions/update_manager/main.php: Merged from 4.0.2: Added missing
	 dbport parameter to um_db_connect() call.

2012-05-16  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php: Added a constants for
	more common used colors in pandora: critical, 
	warning, normal, unknown...

	* extensions/agents_alerts.php: Added new view of
	agents/alerts for pending tasks #3468889

2012-05-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css: Added transparent background in input
	html elements of image type.
	
	Bugfix merged from branches.

2012-05-14  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_ultimopaquete.php
	godmode/agentes/module_manager.php: Added string filter
	to modules view in the operation and godmode views for
	pending #3482262
